added UI to rock paper scissors game

--- a/index.html
+++ b/index.html
@@ -7,10 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
+
+    <div class="container">
+
+        <div class="header">
+            Rock Paper Scissors!
+
+        </div>
+        <div class="main-box">
+            <div class="rps-box">
+                <div class="box1">
+                    <img class="rpsimage" src="" alt=""> Rock
+
+                </div>
+                <div class="box2">
+                    <img class="rpsimage" src="" alt=""> Paper
+                </div>
+                <div class="box3">
+                    <img class="rpsimage" src="" alt=""> Scissors
+                </div>
+            </div>
+
+        </div>
+        <div class="footer">
+            Copyright <img class="git-icon" src="./images/githubicon.png" alt="github icon"> EdgarGrcs
+        </div>
+
+    </div>
+
+
 
 </body>
 
