add player, computer input

--- a/index.html
+++ b/index.html
@@ -41,11 +41,17 @@
 
                 <div id="winner"></div>
                 <div class="innerBox">
-                    <div class="playerText"> You:</div>
+                    <div class="inputBox">
+                        <div class="playerText"> You:</div>
+                        <div class="playerInput"></div>
+                    </div>
                     <div id="scorePlayer"></div>
                 </div>
                 <div class="innerBox">
-                    <div class="playerText"> Computer:</div>
+                    <div class="inputBox">
+                        <div class="playerText"> Computer:</div>
+                        <div class="computerInput"></div>
+                    </div>
                     <div id="scoreComputer"></div>
                 </div>
 
