added slick UI, added output

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 <div class="innerBox">
                     <div class="inputBox">
                         <div class="playerText"> You:</div>
-                        <div class="playerInput"></div>
+                        <div id="playerInput"></div>
                     </div>
                     <div id="scorePlayer"></div>
                 </div>
                 <div class="innerBox">
                     <div class="inputBox">
                         <div class="playerText"> Computer:</div>
-                        <div class="computerInput"></div>
+                        <div id="computerInput"></div>
                     </div>
                     <div id="scoreComputer"></div>
                 </div>
