--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="footer">
             Copyright
-            <a href="https://github.com/EdgarGrcs"><img class="git-icon" src="./images/githubicon.png" alt="github icon"> </a> EdgarGrcs
+            <a href="https://github.com/EdgarGrcs"><img class="git-icon" src="./Images/githubicon.png" alt="github icon"> </a> EdgarGrcs
         </div>
     </div>
 </body>
